# data-warehouse-project

./: .env.example  .gitignore  README.md  docker-compose.yaml  project.code-workspace
config/markdown-to-pdf/: .gitignore  .luacheckrc  main.py  mermaid.lua  pyproject.toml  stylua.toml
config/markdown-to-pdf/filters/: config.json  config.lua  latex.lua  logger.lua  mermaid.lua  pandoc_filter.lua  state.lua
config/markdown-to-pdf/types/: pandoc.lua
config/mdb-loader/: .dockerignore  Dockerfile  main.py  pyproject.toml
config/setup/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
config/setup/src/: config.py  constants.py  database.py  metabase.py  models.py  orchestrator.py  pentaho.py
config/webspoon/: Dockerfile  entrypoint.webspoon.sh
data/etl/jobs/: job_step10_extract_bb.kjb  job_step10_extract_mmm.kjb  job_step10_extract_ms.kjb  job_step11_integration.kjb  job_step13_load_rolap.kjb
data/etl/transformations/: transform_extract_bb_client.ktr  transform_extract_mmm_client.ktr  transform_extract_ms_client.ktr  transform_load_aggregates.ktr  transform_load_fact_sales.ktr
data/olap/: moremovies.xml
data/pentaho/jobs/: job_extract_buckboaster.kjb  job_extract_metrostarlet.kjb  job_extract_moviemegamart.kjb  job_integration.kjb  job_load_rolap.kjb
data/pentaho/transforms/: transform_extract_buckboaster_customer.ktr  transform_extract_metrostarlet_customer.ktr  transform_extract_moviemegamart_customer.ktr  transform_integrate_movie.ktr  transform_load_aggregates.ktr  transform_load_dim_customer.ktr  transform_load_fact_sales.ktr
data/report/: second_report_fr.md
data/sql/: 01_sources_buckboaster.sql  02_sources_metrostarlet.sql  02_sources_ms.sql  03_sources_mmm.sql  03_sources_moviemegamart.sql  04_schema_integrated.sql  05_rolap_warehouse.sql  06_load_rolap_from_raw.sql
data/sql/questions/: q1_top_movies_monthly_revenue.sql  q2_monthly_revenue_by_store.sql  q3_renter_profile.sql  q4_movies_rented_by_store.sql  q5_rental_trends.sql  questions.toml
report/: first_report_fr.md  project_report.cls
