[tool.poetry]
name = "mdb-loader"
version = "0.1.0"
description = "Loader for MDB files into MySQL database."
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^46.0.6"
pandas = "^3.0.1"
sqlalchemy = "^2.0.48"
pymysql = "^1.1.2"
polars = "1.32.3"
polars-access-mdbtools = "^0.1.2"
tenacity = "^9.1.4"
pydantic = "^2.12.5"
connectorx = "^0.4.5"
pyarrow = "^23.0.1"
wrapt = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
stubPath = "types"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "ANN",
    "UP",
    "N",
    "C4",
    "B",
    "A",
    "YTT",
    "W",
    "FBT",
    "Q",
    "RUF",
    "I",
]
fixable = ["N"]
unfixable = ["B", "RUF"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.mypy]
python_version = "3.12"
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
extra_checks = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
# plugins = "pydantic.mypy"
mypy_path = "types"
python_executable = ".venv/bin/python"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
